<resources>
    <string name="app_name">Határidőnapló</string>
    <string name="login_or_reg">Itt jelentkezz be, vagy regisztrálj!</string>
    <string name="login">Bejelentkezés</string>
    <string name="reg">Regisztráció</string>

    <string name="title_activity_menu">Határidőnapló</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_calendar">Naptár</string>
    <string name="menu_notes">Jegyzetek</string>
    <string name="menu_habittracker">Napi szokások</string>
    <string name="logout">Kijelentkezés</string>
    <string name="napt_r_n_zet">Naptár nézet</string>
    <string name="lista_n_zet">Lista nézet</string>
    <string name="add_note">Új Jegyzet hozzáadása</string>
    <string name="add_habit">Új szokás hozzáadása</string>
    <string name="add">Hozzáadás</string>
    <string name="action_profil">Profil</string>
    <string name="action_settings">Beállítások</string>
    <string name="menu_calendarlist">List</string>
    <string name="add_event">Új esemény létrehozása</string>

    <string name="title">Cím</string>
    <string name="desc">Leírása</string>
    <string name="make_pic">Kép készítése</string>
    <string name="choose_pic">Kép választása</string>
    <string name="low">nem fontos</string>
    <string name="medium">átlagos</string>
    <string name="high">fontos</string>
    <string name="modify">Szerkesztés</string>
    <string name="delete">Törlés</string>
    <string name="back">Vissza</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Dátum</string>
    <string name="location">Helyszín</string>
    <string name="time">Idő</string>
    <string name="reg_data">Töltsd ki az adataidat a regisztrációhoz!</string>
    <string name="title_activity_show_event">Határidőnapló</string>
    <string name="ready">Kész?</string>
    <string name="habit_title">Szokás neve:</string>
    <string name="change_habits_date">Szokás dátumának megváltoztatása</string>
    <string name="change_sorting">Sorrend megváltoztatása</string>
    <string name="filter">Szűrés</string>
    <string name="all">minden</string>
    <string name="set_notifications">Értesítések beállítása:</string>
    <string name="question_time_notification">Mikor szeretnéd megkapni a napi értesítésed?</string>
    <string name="morning">reggel (8:00)</string>
    <string name="noon">délben (12:00)</string>
    <string name="evening">este (18:00)</string>
    <string name="start_alarm">Értesítések bekapcsolása</string>
    <string name="cancel_alarm">Értesítések kikapcsolása</string>
    <string name="archive_notes">Törölt jegyzetek</string>
    <string name="delete_all">Kiürítés</string>
    <string name="delete_notes">Törölt jegyzetek (Archívum)</string>
    <string name="renew">Helyreállítás</string>
    <string name="end_delete">Végleges törlés</string>

</resources>
