<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="414dp"
        android:layout_height="198dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profil_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Profil adatai:"
            android:textAppearance="@style/RedText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profil_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Email: "
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/profil_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Név: "
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="377dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/set_notifications"
            android:textAppearance="@style/RedText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_time_notification"
            android:textColor="@color/colorPrimaryDark" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/morning" />

            <RadioButton
                android:id="@+id/radioButtonNoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noon" />

            <RadioButton
                android:id="@+id/radioButtonEvening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evening" />
        </RadioGroup>

        <Button
            android:id="@+id/startAlarm"
            style="@style/BlackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:text="@string/start_alarm" />

        <Button
            android:id="@+id/cancelAlarm"
            style="@style/BlackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="132dp"
            android:text="@string/cancel_alarm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>